--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -6706,21 +6706,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 295,
    "id": "87d496c1-f0f7-4001-9e12-05754325b7fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Type_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
-    "Type_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
-    "Type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
-    "Type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
-    "Type_passing_overall = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+    "type_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "type_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "type_passing_overall = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 296,
    "id": "4a28f068-f417-4afd-bcc5-1a89fbde577b",
    "metadata": {},
    "outputs": [
@@ -6752,7 +6752,7 @@
        "      <th>% Overall Passing</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>School Size</th>\n",
+       "      <th>School Type</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -6762,48 +6762,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Small (&lt;1000)</th>\n",
-       "      <td>83.821598</td>\n",
-       "      <td>83.929843</td>\n",
-       "      <td>93.550225</td>\n",
-       "      <td>96.099437</td>\n",
-       "      <td>89.883853</td>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Medium (1000-2000)</th>\n",
-       "      <td>83.374684</td>\n",
-       "      <td>83.864438</td>\n",
-       "      <td>93.599695</td>\n",
-       "      <td>96.790680</td>\n",
-       "      <td>90.621535</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Large (2000-5000)</th>\n",
-       "      <td>77.746417</td>\n",
-       "      <td>81.344493</td>\n",
-       "      <td>69.963361</td>\n",
-       "      <td>82.766634</td>\n",
-       "      <td>58.286003</td>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    Average Math Score  Average Reading Score  % Passing Math  \\\n",
-       "School Size                                                                     \n",
-       "Small (<1000)                83.821598              83.929843       93.550225   \n",
-       "Medium (1000-2000)           83.374684              83.864438       93.599695   \n",
-       "Large (2000-5000)            77.746417              81.344493       69.963361   \n",
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
        "\n",
-       "                    % Passing Reading  % Overall Passing  \n",
-       "School Size                                               \n",
-       "Small (<1000)               96.099437          89.883853  \n",
-       "Medium (1000-2000)          96.790680          90.621535  \n",
-       "Large (2000-5000)           82.766634          58.286003  "
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 291,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6811,18 +6801,18 @@
    "source": [
     "# Assemble into DataFrame.\n",
     "type_summary_df = pd.DataFrame({\n",
-    "          \"Average Math Score\" : size_math,\n",
-    "          \"Average Reading Score\": size_reading,\n",
-    "          \"% Passing Math\": size_passing_math,\n",
-    "          \"% Passing Reading\": size_passing_reading,\n",
-    "          \"% Overall Passing\": size_passing_overall})\n",
+    "          \"Average Math Score\" : type_math,\n",
+    "          \"Average Reading Score\": type_reading,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_passing_overall})\n",
     "\n",
     "type_summary_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 297,
    "id": "389793ec-3bca-430f-857c-44d0a67e3472",
    "metadata": {},
    "outputs": [
@@ -6854,7 +6844,7 @@
        "      <th>% Overall Passing</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>School Size</th>\n",
+       "      <th>School Type</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -6864,48 +6854,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Small (&lt;1000)</th>\n",
-       "      <td>83.8</td>\n",
-       "      <td>83.9</td>\n",
-       "      <td>94</td>\n",
-       "      <td>96</td>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Medium (1000-2000)</th>\n",
-       "      <td>83.4</td>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
        "      <td>83.9</td>\n",
        "      <td>94</td>\n",
        "      <td>97</td>\n",
-       "      <td>91</td>\n",
+       "      <td>90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Large (2000-5000)</th>\n",
-       "      <td>77.7</td>\n",
-       "      <td>81.3</td>\n",
-       "      <td>70</td>\n",
-       "      <td>83</td>\n",
-       "      <td>58</td>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   Average Math Score Average Reading Score % Passing Math  \\\n",
-       "School Size                                                                  \n",
-       "Small (<1000)                    83.8                  83.9             94   \n",
-       "Medium (1000-2000)               83.4                  83.9             94   \n",
-       "Large (2000-5000)                77.7                  81.3             70   \n",
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
        "\n",
-       "                   % Passing Reading % Overall Passing  \n",
-       "School Size                                             \n",
-       "Small (<1000)                     96                90  \n",
-       "Medium (1000-2000)                97                91  \n",
-       "Large (2000-5000)                 83                58  "
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
       ]
      },
-     "execution_count": 292,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
