updated read me

--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -2068,7 +2068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 63,
    "id": "f3e46241-322b-4bd2-ba11-ac14c92dea3c",
    "metadata": {},
    "outputs": [
@@ -2108,55 +2108,55 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Bailey High School</th>\n",
-       "      <td>77.083676</td>\n",
-       "      <td>76.996772</td>\n",
-       "      <td>77.515588</td>\n",
-       "      <td>76.492218</td>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>76.859966</td>\n",
+       "      <td>76.612500</td>\n",
+       "      <td>76.395626</td>\n",
+       "      <td>77.690748</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Cabrera High School</th>\n",
-       "      <td>83.094697</td>\n",
-       "      <td>83.154506</td>\n",
-       "      <td>82.765560</td>\n",
-       "      <td>83.277487</td>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>83.420755</td>\n",
+       "      <td>82.917411</td>\n",
+       "      <td>83.383495</td>\n",
+       "      <td>83.778976</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Figueroa High School</th>\n",
-       "      <td>76.403037</td>\n",
-       "      <td>76.539974</td>\n",
-       "      <td>76.884344</td>\n",
-       "      <td>77.151369</td>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>83.087886</td>\n",
+       "      <td>83.498795</td>\n",
+       "      <td>83.497041</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Ford High School</th>\n",
-       "      <td>77.361345</td>\n",
-       "      <td>77.672316</td>\n",
-       "      <td>76.918058</td>\n",
-       "      <td>76.179963</td>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>83.085578</td>\n",
+       "      <td>83.724422</td>\n",
+       "      <td>83.195326</td>\n",
+       "      <td>83.035794</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Griffin High School</th>\n",
-       "      <td>82.044010</td>\n",
-       "      <td>84.229064</td>\n",
-       "      <td>83.842105</td>\n",
-       "      <td>83.356164</td>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>83.264706</td>\n",
+       "      <td>84.010288</td>\n",
+       "      <td>83.836782</td>\n",
+       "      <td>83.644986</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            9th       10th       11th       12th\n",
-       "school_name                                                     \n",
-       "Bailey High School    77.083676  76.996772  77.515588  76.492218\n",
-       "Cabrera High School   83.094697  83.154506  82.765560  83.277487\n",
-       "Figueroa High School  76.403037  76.539974  76.884344  77.151369\n",
-       "Ford High School      77.361345  77.672316  76.918058  76.179963\n",
-       "Griffin High School   82.044010  84.229064  83.842105  83.356164"
+       "                             9th       10th       11th       12th\n",
+       "school_name                                                      \n",
+       "Rodriguez High School  76.859966  76.612500  76.395626  77.690748\n",
+       "Shelton High School    83.420755  82.917411  83.383495  83.778976\n",
+       "Thomas High School           NaN  83.087886  83.498795  83.497041\n",
+       "Wilson High School     83.085578  83.724422  83.195326  83.035794\n",
+       "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2169,12 +2169,12 @@
     "               \"11th\": eleventh_math,\n",
     "               \"12th\": twelfth_math})\n",
     "\n",
-    "math_scores_by_grade.head()"
+    "math_scores_by_grade.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 64,
    "id": "4de5c2b7-fb28-486b-acef-5637da878bd4",
    "metadata": {},
    "outputs": [
@@ -2214,55 +2214,55 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Bailey High School</th>\n",
-       "      <td>81.303155</td>\n",
-       "      <td>80.907183</td>\n",
-       "      <td>80.945643</td>\n",
-       "      <td>80.912451</td>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>80.993127</td>\n",
+       "      <td>80.629808</td>\n",
+       "      <td>80.864811</td>\n",
+       "      <td>80.376426</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Cabrera High School</th>\n",
-       "      <td>83.676136</td>\n",
-       "      <td>84.253219</td>\n",
-       "      <td>83.788382</td>\n",
-       "      <td>84.287958</td>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>84.122642</td>\n",
+       "      <td>83.441964</td>\n",
+       "      <td>84.373786</td>\n",
+       "      <td>82.781671</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Figueroa High School</th>\n",
-       "      <td>81.198598</td>\n",
-       "      <td>81.408912</td>\n",
-       "      <td>80.640339</td>\n",
-       "      <td>81.384863</td>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>84.254157</td>\n",
+       "      <td>83.585542</td>\n",
+       "      <td>83.831361</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Ford High School</th>\n",
-       "      <td>80.632653</td>\n",
-       "      <td>81.262712</td>\n",
-       "      <td>80.403642</td>\n",
-       "      <td>80.662338</td>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>83.939778</td>\n",
+       "      <td>84.021452</td>\n",
+       "      <td>83.764608</td>\n",
+       "      <td>84.317673</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Griffin High School</th>\n",
-       "      <td>83.369193</td>\n",
-       "      <td>83.706897</td>\n",
-       "      <td>84.288089</td>\n",
-       "      <td>84.013699</td>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>83.833333</td>\n",
+       "      <td>83.812757</td>\n",
+       "      <td>84.156322</td>\n",
+       "      <td>84.073171</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            9th       10th       11th       12th\n",
-       "school_name                                                     \n",
-       "Bailey High School    81.303155  80.907183  80.945643  80.912451\n",
-       "Cabrera High School   83.676136  84.253219  83.788382  84.287958\n",
-       "Figueroa High School  81.198598  81.408912  80.640339  81.384863\n",
-       "Ford High School      80.632653  81.262712  80.403642  80.662338\n",
-       "Griffin High School   83.369193  83.706897  84.288089  84.013699"
+       "                             9th       10th       11th       12th\n",
+       "school_name                                                      \n",
+       "Rodriguez High School  80.993127  80.629808  80.864811  80.376426\n",
+       "Shelton High School    84.122642  83.441964  84.373786  82.781671\n",
+       "Thomas High School           NaN  84.254157  83.585542  83.831361\n",
+       "Wilson High School     83.939778  84.021452  83.764608  84.317673\n",
+       "Wright High School     83.833333  83.812757  84.156322  84.073171"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2275,7 +2275,7 @@
     "               \"11th\": eleventh_reading,\n",
     "               \"12th\": twelfth_reading})\n",
     "\n",
-    "reading_scores_by_grade.head()"
+    "reading_scores_by_grade.tail()"
    ]
   },
   {
@@ -2305,7 +2305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 70,
    "id": "513bcc34-1814-4229-ac37-65283afd3c14",
    "metadata": {},
    "outputs": [
@@ -2391,7 +2391,7 @@
        "4   Griffin High School  83.4  83.7  84.3  84.0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2404,7 +2404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 71,
    "id": "a50194ea-5310-475a-afe0-97022c274a34",
    "metadata": {},
    "outputs": [
@@ -2490,7 +2490,7 @@
        "4   Griffin High School  83.4  83.7  84.3  84.0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
