--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -2174,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 73,
    "id": "4de5c2b7-fb28-486b-acef-5637da878bd4",
    "metadata": {},
    "outputs": [
@@ -2214,55 +2214,55 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Rodriguez High School</th>\n",
-       "      <td>80.993127</td>\n",
-       "      <td>80.629808</td>\n",
-       "      <td>80.864811</td>\n",
-       "      <td>80.376426</td>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>81.303155</td>\n",
+       "      <td>80.907183</td>\n",
+       "      <td>80.945643</td>\n",
+       "      <td>80.912451</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Shelton High School</th>\n",
-       "      <td>84.122642</td>\n",
-       "      <td>83.441964</td>\n",
-       "      <td>84.373786</td>\n",
-       "      <td>82.781671</td>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>83.676136</td>\n",
+       "      <td>84.253219</td>\n",
+       "      <td>83.788382</td>\n",
+       "      <td>84.287958</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Thomas High School</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>84.254157</td>\n",
-       "      <td>83.585542</td>\n",
-       "      <td>83.831361</td>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>81.198598</td>\n",
+       "      <td>81.408912</td>\n",
+       "      <td>80.640339</td>\n",
+       "      <td>81.384863</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Wilson High School</th>\n",
-       "      <td>83.939778</td>\n",
-       "      <td>84.021452</td>\n",
-       "      <td>83.764608</td>\n",
-       "      <td>84.317673</td>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>80.632653</td>\n",
+       "      <td>81.262712</td>\n",
+       "      <td>80.403642</td>\n",
+       "      <td>80.662338</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Wright High School</th>\n",
-       "      <td>83.833333</td>\n",
-       "      <td>83.812757</td>\n",
-       "      <td>84.156322</td>\n",
-       "      <td>84.073171</td>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>83.369193</td>\n",
+       "      <td>83.706897</td>\n",
+       "      <td>84.288089</td>\n",
+       "      <td>84.013699</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                             9th       10th       11th       12th\n",
-       "school_name                                                      \n",
-       "Rodriguez High School  80.993127  80.629808  80.864811  80.376426\n",
-       "Shelton High School    84.122642  83.441964  84.373786  82.781671\n",
-       "Thomas High School           NaN  84.254157  83.585542  83.831361\n",
-       "Wilson High School     83.939778  84.021452  83.764608  84.317673\n",
-       "Wright High School     83.833333  83.812757  84.156322  84.073171"
+       "                            9th       10th       11th       12th\n",
+       "school_name                                                     \n",
+       "Bailey High School    81.303155  80.907183  80.945643  80.912451\n",
+       "Cabrera High School   83.676136  84.253219  83.788382  84.287958\n",
+       "Figueroa High School  81.198598  81.408912  80.640339  81.384863\n",
+       "Ford High School      80.632653  81.262712  80.403642  80.662338\n",
+       "Griffin High School   83.369193  83.706897  84.288089  84.013699"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2275,7 +2275,7 @@
     "               \"11th\": eleventh_reading,\n",
     "               \"12th\": twelfth_reading})\n",
     "\n",
-    "reading_scores_by_grade.tail()"
+    "reading_scores_by_grade.head()"
    ]
   },
   {
@@ -2305,7 +2305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 34,
    "id": "513bcc34-1814-4229-ac37-65283afd3c14",
    "metadata": {},
    "outputs": [
@@ -2330,68 +2330,70 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>school_name</th>\n",
        "      <th>9th</th>\n",
        "      <th>10th</th>\n",
        "      <th>11th</th>\n",
        "      <th>12th</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Bailey High School</td>\n",
-       "      <td>81.3</td>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>81.0</td>\n",
+       "      <td>80.6</td>\n",
        "      <td>80.9</td>\n",
-       "      <td>80.9</td>\n",
-       "      <td>80.9</td>\n",
+       "      <td>80.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Cabrera High School</td>\n",
-       "      <td>83.7</td>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>84.1</td>\n",
+       "      <td>83.4</td>\n",
+       "      <td>84.4</td>\n",
+       "      <td>82.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>nan</td>\n",
        "      <td>84.3</td>\n",
+       "      <td>83.6</td>\n",
+       "      <td>83.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>83.9</td>\n",
+       "      <td>84.0</td>\n",
        "      <td>83.8</td>\n",
        "      <td>84.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Figueroa High School</td>\n",
-       "      <td>81.2</td>\n",
-       "      <td>81.4</td>\n",
-       "      <td>80.6</td>\n",
-       "      <td>81.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Ford High School</td>\n",
-       "      <td>80.6</td>\n",
-       "      <td>81.3</td>\n",
-       "      <td>80.4</td>\n",
-       "      <td>80.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Griffin High School</td>\n",
-       "      <td>83.4</td>\n",
-       "      <td>83.7</td>\n",
-       "      <td>84.3</td>\n",
-       "      <td>84.0</td>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>83.8</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>84.2</td>\n",
+       "      <td>84.1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            school_name   9th  10th  11th  12th\n",
-       "0    Bailey High School  81.3  80.9  80.9  80.9\n",
-       "1   Cabrera High School  83.7  84.3  83.8  84.3\n",
-       "2  Figueroa High School  81.2  81.4  80.6  81.4\n",
-       "3      Ford High School  80.6  81.3  80.4  80.7\n",
-       "4   Griffin High School  83.4  83.7  84.3  84.0"
+       "                        9th  10th  11th  12th\n",
+       "school_name                                  \n",
+       "Rodriguez High School  81.0  80.6  80.9  80.4\n",
+       "Shelton High School    84.1  83.4  84.4  82.8\n",
+       "Thomas High School      nan  84.3  83.6  83.8\n",
+       "Wilson High School     83.9  84.0  83.8  84.3\n",
+       "Wright High School     83.8  83.8  84.2  84.1"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2404,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 35,
    "id": "a50194ea-5310-475a-afe0-97022c274a34",
    "metadata": {},
    "outputs": [
